# fare-watch

./: .env.example  .gitignore  README.md  config.example.yaml  config.yaml  conftest.py  fare_watch.db  monitor.py  pyproject.toml
.github/workflows/: corridors.yml  inspiration.yml
docs/: data.json  index.html
docs/superpowers/plans/: 2026-07-09-fare-watch.md
farewatch/: __init__.py  alerts.py  cli.py  config.py  corridors.py  dashboard.py  db.py  inspiration.py  models.py  report.py  runner.py  seats_aero.py  spend.py  testing.py
farewatch/data/: airports.json
farewatch/notify/: __init__.py  smtp_stub.py  telegram.py
farewatch/providers/: __init__.py  duffel.py  http.py  travelpayouts.py
learnings/: 2026-07-09-duffel-tier2-verification.md  2026-07-09-fare-watch-two-tier.md  2026-07-09-recency-scoping-cleanup.md  2026-07-09-review-then-cheap-model-fix-waves.md  2026-07-09-smoke-with-real-config-catches-interaction-bugs.md  2026-07-13-deployed-code-divergence.md
tests/: test_alerts.py  test_cli.py  test_config.py  test_corridors.py  test_dashboard.py  test_db.py  test_duffel.py  test_gates.py  test_inspiration.py  test_models.py  test_notify.py  test_report.py  test_spend.py  test_travelpayouts.py
tests/fixtures/: airports_min.json  duffel_offer_requests.json  tp_city_directions.json  tp_month_matrix.json  tp_prices_latest.json
