[project]
name = "fare-watch"
version = "0.1.0"
description = "Personal two-tier flight-fare monitoring (Travelpayouts discovery + Duffel verification)"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
